Fix broken nav touch element on mobile.

--- a/styles/archives-style.css
+++ b/styles/archives-style.css
@@ -8,8 +8,15 @@
   /* justify-content: center; */
   /* align-items: flex-start; */
   place-items: center;
+  text-align: center;
 }
 
 .archive-container h1 {
   font-size: 7rem;
+}
+
+@media screen and (max-width: 525px) {
+  .archive-container h1 {
+    font-size: 4rem;
+  }
 }
