--- a/styles/portfolio-style.css
+++ b/styles/portfolio-style.css
@@ -11,6 +11,7 @@
   place-items: center;
 
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio-project {
@@ -19,7 +20,7 @@
 }
 
 .portfolio-desc-title {
-  font-size: 3.1rem;
+  font-size: 3rem;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: -0.02rem;
@@ -58,9 +59,12 @@
 .portfolio-display iframe {
   width: 100%;
   height: 100%;
+  max-width: 720px;
   /* -o-object-fit: contain; */
   /* object-fit: contain; */
   border: none;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 
 .portfolio-project-link {
@@ -72,21 +76,22 @@
   position: relative;
   letter-spacing: -0.04rem;
   font-weight: 400;
+  position: relative;
 }
 
 .portfolio-project-link::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -0.3em;
+  bottom: 0;
   height: 5px;
   width: 100%;
   -webkit-transform: scale(0);
   transform: scale(0);
 
   -webkit-transform-origin: left;
-
   transform-origin: left;
+
   -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
 }
@@ -97,7 +102,22 @@
   transform: scale(1);
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 500px) {
+  .portfolio-desc-title {
+    font-size: 2.4rem;
+  }
+  .arrow-left {
+    top: 0.25%;
+    left: 4%;
+  }
+
+  .arrow-right {
+    top: 0.25%;
+    right: 4%;
+  }
+}
+
+@media screen and (max-width: 400px) {
   .arrow-left,
   .arrow-right {
     font-size: 1.9rem;
@@ -112,4 +132,40 @@
     top: 1.5%;
     right: 2%;
   }
+
+  .portfolio-display {
+    margin-top: 20%;
+    row-gap: 0.25rem;
+  }
+
+  .portfolio-desc-title {
+    font-size: 2.4rem;
+  }
+
+  .portfolio-project {
+    width: 100%;
+    height: 300px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .portfolio-display iframe {
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+    -o-object-fit: contain;
+    overflow: hidden;
+  }
 }
+/* 
+@media screen and (max-width: 390px) {
+  .arrow-left {
+    top: 4%;
+    left: 2%;
+  }
+
+  .arrow-right {
+    top: 4%;
+    right: 2%;
+  }
+} */
