--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ a {
 
 .logo-container {
   height: 10%;
-  min-width: 90%;
+  width: 85%;
   /* background-color: red; */
   position: absolute;
   top: 0%;
@@ -97,11 +97,12 @@ a {
 
 .navbar-touch-element {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 3%;
+  top: 0%;
   height: 100%;
   width: 10%;
   cursor: pointer;
+  z-index: 1000;
 }
 
 .navbar-square {
@@ -110,21 +111,23 @@ a {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  top: 50%;
+  top: 55%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  cursor: pointer;
+  pointer-events: all;
+  z-index: 999;
 }
 
 .navbar-link-container {
   position: fixed;
   opacity: 0;
 
-  min-width: 90%;
+  min-width: 88%;
   min-height: 10%;
 
   background-color: rgb(232, 232, 246);
-  /* background-color: rgb(214, 214, 228); */
 
   -webkit-transform: translateX(-200%);
 
@@ -364,7 +367,7 @@ a {
 }
 
 #page-footer {
-  height: 20vh;
+  height: 150px;
   width: 100vw;
   margin-top: 6vh;
   background-color: #3a4161;
@@ -436,16 +439,18 @@ a {
     font-size: 1rem;
   }
 
-  .navbar-touch-element {
-    position: absolute;
-    right: 2%;
-    top: 0;
-    height: 100%;
-    width: 10%;
-    cursor: pointer;
-  }
-
   .blog-post-container:first-of-type {
     margin-top: 25%;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .navbar-link a {
+    font-size: 0.8rem;
+    margin-right: 0.6rem;
+  }
+
+  .navbar-link-container {
+    min-width: 80%;
   }
 }
